@@ -123,6 +123,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25928: Add Decimal.as_integer_ratio().
+
 - Issue #25768: Have the functions in compileall return booleans instead of
   ints and add proper documentation and tests for the return values.
 
